[gd_scene load_steps=24 format=3 uid="uid://cdnt4pq102cge"]

[ext_resource type="Theme" uid="uid://dxmwch8d4tvvj" path="res://user-interface/resource/theme/Menu.tres" id="1_g15sc"]
[ext_resource type="Script" path="res://user-interface/lobby/lobby.gd" id="1_ggrcv"]
[ext_resource type="Script" path="res://user-interface/control-node/SFXButton.gd" id="2_37nfa"]
[ext_resource type="Shortcut" uid="uid://cmfbyxixc4xv3" path="res://user-interface/resource/shortcut/escape.tres" id="3_0dhjg"]
[ext_resource type="PackedScene" uid="uid://ffnff8ahyxxn" path="res://entity/player/reimu/reimu_sprite.tscn" id="4_07fsl"]
[ext_resource type="Script" path="res://user-interface/lobby/setting/Controls.gd" id="4_i5a55"]
[ext_resource type="FontFile" uid="uid://c7ppp33ch6e5" path="res://user-interface/resource/font/Vbutlong.ttf" id="4_p1gtv"]
[ext_resource type="FontFile" uid="uid://dxj7w5h2hhvec" path="res://user-interface/resource/font/NotoSansMono-Regular.ttf" id="5_0chp8"]
[ext_resource type="Texture2D" uid="uid://cx7ewf38kbh34" path="res://entity/player/reimu/resource/reimu-hitbox.png" id="5_bdc1a"]
[ext_resource type="Script" path="res://user-interface/control-node/FormatLabel.gd" id="5_xl15t"]
[ext_resource type="Script" path="res://entity/bullet/BulletBasic.cs" id="6_5157v"]
[ext_resource type="Script" path="res://user-interface/control-node/SFXToggler.gd" id="6_kg3bu"]
[ext_resource type="StyleBox" uid="uid://bljqcvjdws526" path="res://user-interface/resource/theme/black.tres" id="6_waubh"]
[ext_resource type="Script" path="res://user-interface/lobby/setting/Audio.gd" id="7_kgexg"]
[ext_resource type="Script" path="res://user-interface/lobby/LocalScore.gd" id="7_kgl3p"]
[ext_resource type="Shader" path="res://entity/UberItem.gdshader" id="7_s6nsd"]
[ext_resource type="Script" path="res://entity/bullet/Seeker.cs" id="8_corho"]
[ext_resource type="Script" path="res://user-interface/control-node/PercentageSlider.gd" id="8_dn35d"]
[ext_resource type="PackedScene" uid="uid://bsa0xvb26o22u" path="res://entity/player/reimu/yinyang_orb.tscn" id="9_rp433"]
[ext_resource type="Script" path="res://user-interface/lobby/setting/Graphic.gd" id="9_sr4ij"]
[ext_resource type="Texture2D" uid="uid://ccgackr4sld8n" path="res://level/leveler/item-manager/point.png" id="20_lg076"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ah5ge"]
shader = ExtResource("7_s6nsd")
shader_parameter/time_scale = null
shader_parameter/spin = null
shader_parameter/alpha_offset = null
shader_parameter/sin_alpha = null
shader_parameter/displace = 0.0
shader_parameter/rainbow = null
shader_parameter/wobble = null
shader_parameter/wobble_max = 1.25
shader_parameter/wobble_min = 0.75

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_680b1"]
normal = Vector2(0, 1)

[node name="Lobby" type="Node2D"]
script = ExtResource("1_ggrcv")

[node name="Background" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Background"]

[node name="Previewer" type="Camera2D" parent="."]
anchor_mode = 0

[node name="lobby" type="VBoxContainer" parent="Previewer"]
texture_filter = 2
custom_minimum_size = Vector2(540, 960)
offset_right = 540.0
offset_bottom = 960.0
theme = ExtResource("1_g15sc")

[node name="back" type="Button" parent="Previewer/lobby"]
layout_mode = 2
size_flags_horizontal = 0
text = "< Back"
script = ExtResource("2_37nfa")

[node name="TabContainer" type="TabContainer" parent="Previewer/lobby"]
layout_mode = 2
size_flags_vertical = 3

[node name="Level" type="VBoxContainer" parent="Previewer/lobby/TabContainer"]
layout_mode = 2

[node name="OptionButton" type="OptionButton" parent="Previewer/lobby/TabContainer/Level"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Previewer/lobby/TabContainer/Level"]
layout_mode = 2
size_flags_vertical = 3

[node name="previous" type="Button" parent="Previewer/lobby/TabContainer/Level/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "<"
flat = true
alignment = 0

[node name="next" type="Button" parent="Previewer/lobby/TabContainer/Level/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = ">"
flat = true
alignment = 2

[node name="HSlider" type="HSlider" parent="Previewer/lobby/TabContainer/Level"]
layout_mode = 2
min_value = 0.5
max_value = 2.0
step = 0.1
value = 2.0
allow_greater = true
tick_count = 15
ticks_on_borders = true

[node name="GameSpeed" type="Label" parent="Previewer/lobby/TabContainer/Level"]
layout_mode = 2
text = "Game Speed: %d%%"
horizontal_alignment = 1

[node name="Button" type="Button" parent="Previewer/lobby/TabContainer/Level"]
layout_mode = 2
text = "Challenge Accept"
script = ExtResource("2_37nfa")

[node name="Score" type="TabContainer" parent="Previewer/lobby/TabContainer"]
visible = false
layout_mode = 2

[node name="Local" type="RichTextLabel" parent="Previewer/lobby/TabContainer/Score"]
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("4_p1gtv")
theme_override_fonts/mono_font = ExtResource("5_0chp8")
theme_override_font_sizes/normal_font_size = 64
theme_override_font_sizes/mono_font_size = 32
theme_override_styles/normal = ExtResource("6_waubh")
bbcode_enabled = true
text = "Personal Best:
[code][color=ff7085]Score:%09d[/color]
[color=147dfa]  Item:  %06d[/color]
 [color=63c259] Graze: %06d[/color]
[color=ffb273]Try count: %d[/color]
Game speed %d%%[/code]
Partner Score:
[code]%s
[color=ff7085]Score:%09d[/color]
[color=147dfa]  Item:  %06d[/color]
 [color=63c259] Graze: %06d[/color]"
autowrap_mode = 0
script = ExtResource("7_kgl3p")

[node name="Point" type="Sprite2D" parent="Previewer/lobby/TabContainer/Score/Local"]
texture_filter = 1
position = Vector2(25, 199)
scale = Vector2(2, 2)
texture = ExtResource("20_lg076")

[node name="Reimu-hitbox" type="Sprite2D" parent="Previewer/lobby/TabContainer/Score/Local/Point"]
texture_filter = 1
position = Vector2(0, 22.5)
scale = Vector2(2, 2)
texture = ExtResource("5_bdc1a")

[node name="Point2" type="Sprite2D" parent="Previewer/lobby/TabContainer/Score/Local/Point"]
texture_filter = 1
position = Vector2(-1.5, 195.5)
texture = ExtResource("20_lg076")

[node name="Reimu-hitbox2" type="Sprite2D" parent="Previewer/lobby/TabContainer/Score/Local/Point/Point2"]
texture_filter = 1
position = Vector2(0, 22.5)
scale = Vector2(2, 2)
texture = ExtResource("5_bdc1a")

[node name="Internet" type="Label" parent="Previewer/lobby/TabContainer/Score"]
visible = false
layout_mode = 2
text = "Not yet implemented"

[node name="Settings" type="VBoxContainer" parent="Previewer/lobby/TabContainer"]
visible = false
layout_mode = 2

[node name="back" type="Button" parent="Previewer/lobby/TabContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 8
shortcut = ExtResource("3_0dhjg")
text = "< Back"
script = ExtResource("2_37nfa")
press_sfx = false

[node name="TabContainer" type="TabContainer" parent="Previewer/lobby/TabContainer/Settings"]
layout_mode = 2

[node name="Controls" type="VBoxContainer" parent="Previewer/lobby/TabContainer/Settings/TabContainer"]
layout_mode = 2
script = ExtResource("4_i5a55")

[node name="drag" type="Button" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Controls"]
layout_mode = 2
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Drag: %s"
alignment = 0
script = ExtResource("2_37nfa")

[node name="bomb" type="Button" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Controls"]
layout_mode = 2
focus_neighbor_right = NodePath("../reset")
focus_neighbor_bottom = NodePath("../reset")
focus_next = NodePath("../reset")
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Bomb: %s"
alignment = 0
script = ExtResource("2_37nfa")

[node name="SentivityLabel" type="Label" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Controls"]
layout_mode = 2
text = "Input sentivity : %1.1f"
script = ExtResource("5_xl15t")

[node name="sentivity" type="HSlider" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Controls"]
layout_mode = 2
focus_mode = 0
min_value = 0.1
max_value = 2.0
step = 0.1
value = 2.0
allow_greater = true
tick_count = 20
ticks_on_borders = true

[node name="raw" type="CheckButton" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
text = "Raw Input"
script = ExtResource("6_kg3bu")

[node name="reset" type="Button" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Controls"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_left = NodePath("../bomb")
focus_neighbor_top = NodePath("../bomb")
focus_previous = NodePath("../bomb")
text = "Reset"
script = ExtResource("2_37nfa")

[node name="Audio" type="VBoxContainer" parent="Previewer/lobby/TabContainer/Settings/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("7_kgexg")

[node name="BgmLabel" type="Label" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Audio"]
layout_mode = 2
text = "Music: %d %%"
script = ExtResource("5_xl15t")

[node name="bgm" type="HSlider" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Audio" node_paths=PackedStringArray("label")]
layout_mode = 2
size_flags_vertical = 1
focus_neighbor_left = NodePath("../reset")
focus_neighbor_top = NodePath("../reset")
focus_neighbor_right = NodePath("../muteBGM")
focus_neighbor_bottom = NodePath("../muteBGM")
focus_next = NodePath("../muteBGM")
focus_previous = NodePath("../reset")
min_value = -60.0
max_value = 0.0
step = 0.6
allow_lesser = true
tick_count = 10
script = ExtResource("8_dn35d")
label = NodePath("../BgmLabel")

[node name="muteBGM" type="CheckButton" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Audio"]
layout_mode = 2
size_flags_horizontal = 8
text = "Mute "
script = ExtResource("6_kg3bu")
invert = true

[node name="SfxLabel" type="Label" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Audio"]
layout_mode = 2
focus_neighbor_left = NodePath("../bgm")
focus_neighbor_top = NodePath("../bgm")
focus_neighbor_right = NodePath("../muteSFX")
focus_neighbor_bottom = NodePath("../muteSFX")
focus_next = NodePath("../muteSFX")
focus_previous = NodePath("../bgm")
text = "Sound Effect: %d %%"
script = ExtResource("5_xl15t")

[node name="sfx" type="HSlider" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Audio" node_paths=PackedStringArray("label")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
focus_neighbor_left = NodePath("../muteBGM")
focus_neighbor_top = NodePath("../muteBGM")
focus_neighbor_right = NodePath("../muteSFX")
focus_neighbor_bottom = NodePath("../muteSFX")
focus_next = NodePath("../muteSFX")
focus_previous = NodePath("../muteBGM")
min_value = -60.0
max_value = 0.0
step = 0.6
allow_lesser = true
tick_count = 10
script = ExtResource("8_dn35d")
label = NodePath("../SfxLabel")

[node name="muteSFX" type="CheckButton" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Audio"]
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath("../sfx")
focus_neighbor_top = NodePath("../sfx")
focus_neighbor_right = NodePath("../reset")
focus_neighbor_bottom = NodePath("../reset")
focus_next = NodePath("../reset")
focus_previous = NodePath("../sfx")
text = "Mute "
script = ExtResource("6_kg3bu")
invert = true

[node name="reset" type="Button" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Audio"]
layout_mode = 2
size_flags_horizontal = 8
focus_neighbor_left = NodePath("../muteSFX")
focus_neighbor_top = NodePath("../muteSFX")
focus_neighbor_right = NodePath("../bgm")
focus_neighbor_bottom = NodePath("../bgm")
focus_next = NodePath("../bgm")
focus_previous = NodePath("../muteSFX")
text = "Reset"
script = ExtResource("2_37nfa")
press_sfx = false

[node name="Graphic" type="VBoxContainer" parent="Previewer/lobby/TabContainer/Settings/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("9_sr4ij")

[node name="fullscreen" type="CheckButton" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Graphic"]
layout_mode = 2
focus_neighbor_left = NodePath("../reset")
focus_neighbor_top = NodePath("../reset")
focus_neighbor_right = NodePath("../borderless")
focus_neighbor_bottom = NodePath("../borderless")
focus_next = NodePath("../borderless")
focus_previous = NodePath("../reset")
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Full Screen"
script = ExtResource("6_kg3bu")

[node name="borderless" type="CheckButton" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Graphic"]
layout_mode = 2
focus_neighbor_left = NodePath("../fullscreen")
focus_neighbor_top = NodePath("../fullscreen")
focus_previous = NodePath("../fullscreen")
focus_mode = 0
mouse_default_cursor_shape = 2
text = "Borderless"
script = ExtResource("6_kg3bu")

[node name="reset" type="Button" parent="Previewer/lobby/TabContainer/Settings/TabContainer/Graphic"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
focus_neighbor_right = NodePath("../fullscreen")
focus_neighbor_bottom = NodePath("../fullscreen")
focus_next = NodePath("../fullscreen")
focus_mode = 0
text = "Reset"
script = ExtResource("2_37nfa")

[node name="Character" type="VBoxContainer" parent="Previewer/lobby/TabContainer"]
visible = false
layout_mode = 2

[node name="preview" type="Node2D" parent="Previewer/lobby/TabContainer/Character"]
texture_filter = 1
position = Vector2(270, 453)
scale = Vector2(2, 2)

[node name="ReimuSprite" parent="Previewer/lobby/TabContainer/Character/preview" instance=ExtResource("4_07fsl")]

[node name="Hitbox2" type="Sprite2D" parent="Previewer/lobby/TabContainer/Character/preview/ReimuSprite"]
z_index = 100
position = Vector2(0, -8)
texture = ExtResource("5_bdc1a")

[node name="Timer" type="Timer" parent="Previewer/lobby/TabContainer/Character/preview/ReimuSprite"]
process_callback = 0
wait_time = 0.2
autostart = true

[node name="Timer2" type="Timer" parent="Previewer/lobby/TabContainer/Character/preview/ReimuSprite"]
process_callback = 0
wait_time = 0.4
autostart = true

[node name="bullet" type="Node2D" parent="Previewer/lobby/TabContainer/Character/preview/ReimuSprite"]
z_index = 1
script = ExtResource("6_5157v")
maxBullet = 272
speed = 727.0
Grazable = false
CollideWithAreas = true
CollisionMask = 3

[node name="Marker2D" type="Marker2D" parent="Previewer/lobby/TabContainer/Character/preview/ReimuSprite/bullet"]
position = Vector2(7, -38)
rotation = -1.5708
gizmo_extents = 51.7

[node name="Position2D2" type="Marker2D" parent="Previewer/lobby/TabContainer/Character/preview/ReimuSprite/bullet"]
position = Vector2(-7, -58)
rotation = -1.5708
gizmo_extents = 82.9

[node name="orb1" type="Node2D" parent="Previewer/lobby/TabContainer/Character/preview/ReimuSprite"]
z_index = 1
material = SubResource("ShaderMaterial_ah5ge")
script = ExtResource("8_corho")
SeekMask = 2
seekRadius = 500.0
maxBullet = 57
speed = 727.0
Grazable = false
CollideWithAreas = true
CollisionMask = 3

[node name="YinyangOrb" parent="Previewer/lobby/TabContainer/Character/preview/ReimuSprite/orb1" instance=ExtResource("9_rp433")]
position = Vector2(72, 0)
flip_v = true

[node name="YinyangOrb2" parent="Previewer/lobby/TabContainer/Character/preview/ReimuSprite/orb1" instance=ExtResource("9_rp433")]
texture_filter = 1
position = Vector2(-72, 0)
flip_h = false

[node name="OptionButton" type="OptionButton" parent="Previewer/lobby/TabContainer/Character"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Previewer/lobby/TabContainer/Character"]
layout_mode = 2
size_flags_vertical = 3

[node name="previous" type="Button" parent="Previewer/lobby/TabContainer/Character/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "<"
flat = true
alignment = 0

[node name="next" type="Button" parent="Previewer/lobby/TabContainer/Character/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = ">"
flat = true
alignment = 2

[node name="Button" type="Button" parent="Previewer/lobby/TabContainer/Character"]
layout_mode = 2
text = "I choose you"
script = ExtResource("2_37nfa")

[node name="WorldBoundary" type="StaticBody2D" parent="Previewer/lobby"]
collision_mask = 0
constant_linear_velocity = Vector2(1, 0)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Previewer/lobby/WorldBoundary"]
position = Vector2(302, -200)
shape = SubResource("WorldBoundaryShape2D_680b1")

[connection signal="pressed" from="Previewer/lobby/TabContainer/Level/HBoxContainer/previous" to="." method="_change_level" binds= [false]]
[connection signal="pressed" from="Previewer/lobby/TabContainer/Level/HBoxContainer/next" to="." method="_change_level" binds= [true]]
[connection signal="pressed" from="Previewer/lobby/TabContainer/Settings/TabContainer/Controls/drag" to="Previewer/lobby/TabContainer/Settings/TabContainer/Controls" method="_on_drag_pressed" flags=18]
[connection signal="pressed" from="Previewer/lobby/TabContainer/Settings/TabContainer/Controls/bomb" to="Previewer/lobby/TabContainer/Settings/TabContainer/Controls" method="_on_bomb_pressed" flags=18]
[connection signal="value_changed" from="Previewer/lobby/TabContainer/Settings/TabContainer/Controls/sentivity" to="Previewer/lobby/TabContainer/Settings/TabContainer/Controls" method="_on_sentivity_value_changed" flags=18]
[connection signal="pressed" from="Previewer/lobby/TabContainer/Settings/TabContainer/Controls/reset" to="Previewer/lobby/TabContainer/Settings/TabContainer/Controls" method="_on_controls_reset_pressed" flags=18]
[connection signal="value_changed" from="Previewer/lobby/TabContainer/Settings/TabContainer/Audio/bgm" to="Previewer/lobby/TabContainer/Settings/TabContainer/Audio" method="_on_bgm_value_changed" flags=18]
[connection signal="toggled" from="Previewer/lobby/TabContainer/Settings/TabContainer/Audio/muteBGM" to="Previewer/lobby/TabContainer/Settings/TabContainer/Audio" method="_on_muteBGM_toggled" flags=18]
[connection signal="value_changed" from="Previewer/lobby/TabContainer/Settings/TabContainer/Audio/sfx" to="Previewer/lobby/TabContainer/Settings/TabContainer/Audio" method="_on_sfx_value_changed" flags=18]
[connection signal="toggled" from="Previewer/lobby/TabContainer/Settings/TabContainer/Audio/muteSFX" to="Previewer/lobby/TabContainer/Settings/TabContainer/Audio" method="_on_muteSFX_toggled" flags=18]
[connection signal="pressed" from="Previewer/lobby/TabContainer/Settings/TabContainer/Audio/reset" to="Previewer/lobby/TabContainer/Settings/TabContainer/Audio" method="_on_audio_reset_pressed" flags=18]
[connection signal="toggled" from="Previewer/lobby/TabContainer/Settings/TabContainer/Graphic/fullscreen" to="Previewer/lobby/TabContainer/Settings/TabContainer/Graphic" method="_on_fullscreen_toggled" flags=18]
[connection signal="toggled" from="Previewer/lobby/TabContainer/Settings/TabContainer/Graphic/borderless" to="Previewer/lobby/TabContainer/Settings/TabContainer/Graphic" method="_on_borderless_toggled" flags=18]
[connection signal="pressed" from="Previewer/lobby/TabContainer/Settings/TabContainer/Graphic/reset" to="Previewer/lobby/TabContainer/Settings/TabContainer/Graphic" method="_on_reset_pressed" flags=18]
[connection signal="timeout" from="Previewer/lobby/TabContainer/Character/preview/ReimuSprite/Timer" to="Previewer/lobby/TabContainer/Character/preview/ReimuSprite/bullet" method="SpawnBullet" flags=18]
[connection signal="timeout" from="Previewer/lobby/TabContainer/Character/preview/ReimuSprite/Timer2" to="Previewer/lobby/TabContainer/Character/preview/ReimuSprite/orb1" method="SpawnBullet" flags=18]
